[package]
name = "wreport"
version = "0.1.0"
authors = ["Douglas Dale <dougadale@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
structopt = "0.3"
serde_json = "1.0"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
home = "0.5.3"
#shellexpand = "2.0"